[package]
name = "rapt"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[dependencies]
serde = "1.0"
chrono = { version =  "0.4", features = ["serde"], optional = true }
mqttc = { version = "0.1", optional = true }
netopt = { version = "0.1", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
rapt_derive = { path = "rapt_derive", version = "0.1.0" }
assert_matches = "1.1"

[features]
default = ["timestamp_instruments"]
timestamp_instruments = ["chrono"]
mqtt_publisher = ["mqttc"]

[workspace]
members = [".", "rapt_derive"]