[package]
name = "rapt_derive"
version = "0.1.1"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
description = "Rapt derivation macros"
license = "MIT/Apache-2.0"
repository = "https://github.com/ropes-rs/rapt"

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "0.13"
assert_matches = "1.1"
rapt = { version = "0.1", path = ".." }
